added help genersator, organized files

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ $mod = SUPER
 # Default applications
 $terminal = ghostty
 $fileManager = Thunar
-$browser = brave --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
+$browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
 $messenger = env GDK_SCALE=1 signal-desktop --ozone-platform=wayland --enable-features=UseOzonePlatform
 $webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
 
@@ -36,6 +36,10 @@ exec-once = sleep 2 && $HOME/.local/share/archriot/config/bin/welcome
 #__________________________________________________________________________________________________
 # ======================================== Window Rules ===========================================
 source = ~/.config/hypr/windowrules.conf
+
+#__________________________________________________________________________________________________
+# ======================================== Keybindings ============================================
+source = ~/.config/hypr/keybindings.conf
 
 #__________________________________________________________________________________________________
 # ======================================= INPUT SETTINGS ==========================================
@@ -67,6 +71,22 @@ general {
     col.inactive_border = rgba(89b4fa58) rgba(0000ff58)
     layout = dwindle
     allow_tearing = false
+}
+
+# Miscellaneous
+misc {
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    animate_manual_resizes = false
+}
+
+# Group styling
+group {
+    col.border_active = rgba(bb9af7ff) 45deg
+
+    groupbar {
+        col.active = rgba(bb9af7ff)
+    }
 }
 
 # Decorations
@@ -132,26 +152,6 @@ master {
     new_status = master
 }
 
-# Miscellaneous
-misc {
-    force_default_wallpaper = 0
-    disable_hyprland_logo = true
-    animate_manual_resizes = false
-}
-
-# Group styling
-group {
-    col.border_active = rgba(bb9af7ff) 45deg
-
-    groupbar {
-        col.active = rgba(bb9af7ff)
-    }
-}
-
 #__________________________________________________________________________________________________
-# ======================================== KEYBINDINGS  ===========================================
-source = ~/.config/hypr/keybindings.conf
-
-#__________________________________________________________________________________________________
-# ========================================== PLUGINS ==============================================
+# ========================================== Plugins ==============================================
 source = ~/.config/hypr/plugins.conf
