--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -1,7 +1,9 @@
-#__________________________________________________________________________________________________
 # ========================================= KEYBINDINGS ===========================================
-# `unbind` keys before binding them so they dont clash with other keys.
-# Use `find` to make sure it's not already in use in THIS FILE.
+# - `unbind` keys before binding them so they dont clash with other keys.
+# - Use `find` to make sure it's not already in use in THIS FILE.
+# - Inline descriptions will be used by the script to generate the help panel.
+# - Binds without inline description will NOT show on the generated help panel.
+# - Run `generate_keybindings_help` and bind to $webapp="file:///path/to/help.html".
 # =================================================================================================
 
 # -------------------------------------------------------------------------------------------------
@@ -9,67 +11,72 @@
 # -------------------------------------------------------------------------------------------------
 # Default Terminal
 unbind = $mod, return
-bind = $mod, return, exec, $terminal
+bind = $mod, return, exec, $terminal  # Default terminal
 
 # Flying terminal
 unbind = $mod SHIFT, return
-bind = $mod SHIFT, return, exec, $terminal --class=com.mitchellh.ghostty-floating
+bind = $mod SHIFT, return, exec, $terminal --class=com.mitchellh.ghostty-floating # Default terminal (flying)
 
 # Default File Manager
 unbind = $mod, E
-bind = $mod, E, exec, $fileManager
+bind = $mod, E, exec, $fileManager  # Thunar file manager
 
 # System monitor
 unbind = $mod, T
-bind = $mod, T, exec, $terminal -e btop
+bind = $mod, T, exec, $terminal -e btop  # System Monitor
 
 # Default Editors
 unbind = $mod, N
-bind = $mod, N, exec, $terminal -e nvim
+bind = $mod, N, exec, $terminal -e nvim  # NeoVim
 unbind = $mod, C
-bind = $mod, C, exec, code
+bind = $mod, C, exec, DRI_PRIME=1 code  # VSCode
 unbind = $mod, Z
-bind = $mod, Z, exec, zed
+bind = $mod, Z, exec, zed  # Zed
 
 # Default and Alt Browsers
 unbind = $mod, B
-bind = $mod, B, exec, $browser
+bind = $mod, B, exec, $browser  # Brave
 unbind = $mod SHIFT, B
-bind = $mod SHIFT, B, exec, firefox
+bind = $mod SHIFT, B, exec, DRI_PRIME=1 firefox  # Firefox
 #unbind = $mod CTRL, B
 #bind = $mod CTRL, B, exec, chromium
 
 # App launcher
 unbind = $mod, space
-bind = $mod, space, exec, fuzzel
+bind = $mod, space, exec, fuzzel  # App Launcher
 
 # App Closer
 unbind = $mod, Q
-bind = $mod, Q, killactive,
+bind = $mod, Q, killactive  # Close active window
+# Close all unfocused windows on the current workspace
+unbind = $mod SHIFT, Q
+bind = $mod SHIFT, Q, plugin:xtd:closeunfocused  # Close all unfocused windows
 
 # Control Panel
 unbind = $mod, F12
-bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel
+bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel  # Control Panel
 
 # Pomodoro Timer
 unbind = $mod, comma
-bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh
+bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh  # Pomodoro Timer
 
 # Help system
 unbind = $mod, H
-bind = $mod, H, exec, $browser --class=archriot-help --app="https://archriot.org"
+unbind = $mod SHIFT, H
+bind = $mod, H, exec, $webapp="file:///home/tarso/help.html"  # Keybind Mapping
+bind = $mod SHIFT, H, exec, $browser --class=archriot-help --app="https://archriot.org"  # Help System
 
 # Waybar toggle and theme switch
 unbind = $mod SHIFT, SPACE
-bind = $mod SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
+bind = $mod SHIFT, SPACE, exec, pkill -SIGUSR1 waybar  # Toggle Waybar
 unbind = $mod CTRL, SPACE
-bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next
+bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  #Change Background Wallpaper
 
 # Notifications
 unbind = $mod, period
-bind = $mod, period, exec, makoctl dismiss
+bind = $mod, period, exec, makoctl dismiss  # Dismiss a notification
 unbind = $mod SHIFT, period
-bind = $mod SHIFT, period, exec, makoctl dismiss --all
+bind = $mod SHIFT, period, exec, makoctl dismiss --all  # Dismiss all notifications
 
 
 # -------------------------------------------------------------------------------------------------
@@ -77,18 +84,16 @@ bind = $mod SHIFT, period, exec, makoctl dismiss --all
 # -------------------------------------------------------------------------------------------------
 # Fix off-screen windows (manual trigger)
 unbind = $mod SHIFT, TAB
-bind = $mod SHIFT, TAB, exec, ~/.local/share/archriot/config/bin/scripts/fix-offscreen-windows.sh
+bind = $mod SHIFT, TAB, exec, ~/.local/share/archriot/config/bin/scripts/fix-offscreen-windows.sh  # Center offscreen windows
 
 # Window actions
 unbind = $mod, V
 unbind = $mod, J
-unbind = $mod, P
 unbind = $mod, TAB
 #unbind = CTRL, TAB
-bind = $mod, V, togglefloating,
-bind = $mod, J, togglesplit,
-bind = $mod, P, pseudo,
-bind = $mod, TAB, exec, ~/.local/share/archriot/config/bin/scripts/window-switcher.sh --all-workspaces
+bind = $mod, V, togglefloating,  # Toggle floating window
+bind = $mod, J, togglesplit,  # Rearange windows
+bind = $mod, TAB, exec, ~/.local/share/archriot/config/bin/scripts/window-switcher.sh --all-workspaces  # Window switcher
 #bind = CTRL, TAB, hyprexpo:expo, toggle
 
 # Move focus
@@ -96,71 +101,78 @@ unbind = $mod, left
 unbind = $mod, right
 unbind = $mod, up
 unbind = $mod, down
-bind = $mod, left, movefocus, l
-bind = $mod, right, movefocus, r
-bind = $mod, up, movefocus, u
-bind = $mod, down, movefocus, d
+bind = $mod, left, movefocus, l  # Move focus left
+bind = $mod, right, movefocus, r  # Move focus right
+bind = $mod, up, movefocus, u  # Move focus up
+bind = $mod, down, movefocus, d  # Move focus down
 
 # Switch workspaces
 unbind = $mod, 1
 unbind = $mod, 2
 unbind = $mod, 3
 unbind = $mod, 4
-bind = $mod, 1, workspace, 1
-bind = $mod, 2, workspace, 2
-bind = $mod, 3, workspace, 3
-bind = $mod, 4, workspace, 4
+bind = $mod, 1, workspace, 1  # Move to Workspace 1
+bind = $mod, 2, workspace, 2  # Move to Workspace 2
+bind = $mod, 3, workspace, 3  # Move to Workspace 3
+bind = $mod, 4, workspace, 4  # Move to Workspace 4
 
 # Move windows to workspaces
 unbind = $mod SHIFT, 1
 unbind = $mod SHIFT, 2
 unbind = $mod SHIFT, 3
 unbind = $mod SHIFT, 4
-bind = $mod SHIFT, 1, movetoworkspace, 1
-bind = $mod SHIFT, 2, movetoworkspace, 2
-bind = $mod SHIFT, 3, movetoworkspace, 3
-bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 1, movetoworkspace, 1  # Move window to Workspace 1
+bind = $mod SHIFT, 2, movetoworkspace, 2  # Move window to Workspace 2
+bind = $mod SHIFT, 3, movetoworkspace, 3  # Move window to Workspace 3
+bind = $mod SHIFT, 4, movetoworkspace, 4  # Move window to Workspace 4
 
 # Swap windows
 unbind = $mod SHIFT, left
 unbind = $mod SHIFT, right
 unbind = $mod SHIFT, up
 unbind = $mod SHIFT, down
-bind = $mod SHIFT, left, swapwindow, l
-bind = $mod SHIFT, right, swapwindow, r
-bind = $mod SHIFT, up, swapwindow, u
-bind = $mod SHIFT, down, swapwindow, d
+bind = $mod SHIFT, left, swapwindow, l  # Swap windows left
+bind = $mod SHIFT, right, swapwindow, r  # Swap windows right
+bind = $mod SHIFT, up, swapwindow, u  # Swap windows up
+bind = $mod SHIFT, down, swapwindow, d  # Swap windows down
 
 # Move windows around (smart movement)
 unbind = $mod CTRL, left
 unbind = $mod CTRL, right
 unbind = $mod CTRL, up
 unbind = $mod CTRL, down
-bind = $mod CTRL, left, movewindow, l
-bind = $mod CTRL, right, movewindow, r
-bind = $mod CTRL, up, movewindow, u
-bind = $mod CTRL, down, movewindow, d
+bind = $mod CTRL, left, movewindow, l  # Smart-move windows left
+bind = $mod CTRL, right, movewindow, r  # Smart-move windows right
+bind = $mod CTRL, up, movewindow, u  # Smart-move windows up
+bind = $mod CTRL, down, movewindow, d  # Smart-move windows down
 
 # Resize windows
 unbind = $mod, minus
 unbind = $mod, equal
 unbind = $mod SHIFT, minus
 unbind = $mod SHIFT, equal
-bind = $mod, minus, resizeactive, -100 0
-bind = $mod, equal, resizeactive, 100 0
-bind = $mod SHIFT, minus, resizeactive, 0 -100
-bind = $mod SHIFT, equal, resizeactive, 0 100
+bind = $mod, minus, resizeactive, -100 0  # Resize windows left
+bind = $mod, equal, resizeactive, 100 0  # Resize windows right
+bind = $mod SHIFT, minus, resizeactive, 0 -100  # Resize windows up
+bind = $mod SHIFT, equal, resizeactive, 0 100  # Resize windows down
 
 # Unified Fullscreen
 unbind = $mod, F
-bind = $mod, F, fullscreen
+bind = $mod, F, fullscreen  # Toggle Fullscreen
 
-# "Minimize" (send to hidden workspace)
+# "Minimize" (send active window to a hidden workspace)
 unbind = CTRL, ESCAPE
-bind = CTRL, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle
-# Restore last minimized window to current workspace
+bind = CTRL, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle  # Minimize single active window
+# Restore last minimized window to the current workspace
 unbind = SHIFT, ESCAPE
-bind = SHIFT, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle restore
+bind = SHIFT, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle restore  # Restore single minimized window
+
+# "Minimize All Others" (send all unfocused windows on the current workspace to an empty workspace)
+unbind = $mod, D
+bind = $mod, D, plugin:xtd:throwunfocused, 5  # Minimize all unfocused windows
+# Bring all windows from the empty workspace to the current one.
+unbind = $mod SHIFT, D
+bind = $mod SHIFT, D, plugin:xtd:bringallfrom, 5  # Restore all previosly unfocused windows
 
 # -------------------------------------------------------------------------------------------------
 # Media Bindings
@@ -168,8 +180,8 @@ bind = SHIFT, ESCAPE, exec, $HOME/bin/hyprland_minimize-toggle restore
 # Mouse bindings (KDE mouse defaults)
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
-bind = $mod, mouse_down, workspace, e+1
-bind = $mod, mouse_up, workspace, e-1
+bind = $mod, mouse_down, workspace, e+1  # Next Workspace
+bind = $mod, mouse_up, workspace, e-1  # Previous Workspace
 
 # Media keys (hardware default)
 bindel = ,XF86AudioRaiseVolume, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --inc
@@ -189,20 +201,20 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 unbind = , PRINT
 unbind = SHIFT, PRINT
 unbind = CTRL, PRIN
-bind = , PRINT, exec, hyprshot -m region
-bind = SHIFT, PRINT, exec, hyprshot -m window
-bind = CTRL, PRINT, exec, hyprshot -m output
+bind = , PRINT, exec, hyprshot -m region  # Screenshot region
+bind = SHIFT, PRINT, exec, hyprshot -m window  # Screenshot window
+bind = CTRL, PRINT, exec, hyprshot -m output  # Screenshot output
 # Screenshots (clipboard only)
 unbind = $mod SHIFT, S
 unbind = $mod SHIFT, W
 unbind = $mod SHIFT, F
-bind = $mod SHIFT, S, exec, hyprshot -m region --clipboard-only
-bind = $mod SHIFT, W, exec, hyprshot -m window --clipboard-only
-bind = $mod SHIFT, F, exec, hyprshot -m output --clipboard-only
+bind = $mod SHIFT, S, exec, hyprshot -m region --clipboard-only  # Screenshot region (clipboard only)
+bind = $mod SHIFT, W, exec, hyprshot -m window --clipboard-only  # Screenshot window (clipboard only)
+bind = $mod SHIFT, F, exec, hyprshot -m output --clipboard-only  # Screenshot output (clipboard only)
 
 # Color picker
 unbind = $mod, PRINT
-bind = $mod, PRINT, exec, hyprpicker -a
+bind = $mod, PRINT, exec, hyprpicker -a  # Color picker
 
 
 # -------------------------------------------------------------------------------------------------
@@ -213,43 +225,43 @@ bind = , XF86Mail, exec, $webapp="https://mail.google.com/"
 
 # Google Mail
 unbind = $mod, M
-bind = $mod, M, exec, $webapp="https://mail.google.com/"
+bind = $mod, M, exec, $webapp="https://mail.google.com/"  # GMail
 
 # BlueSky
 unbind = $mod, K
-bind = $mod, K, exec, $webapp="https://bsky.app/"
+bind = $mod, K, exec, $webapp="https://bsky.app/"  # BlueSky
 
 # Whatsapp
 unbind = $mod, W
-bind = $mod, W, exec, $webapp="https://web.whatsapp.com/"
+bind = $mod, W, exec, $webapp="https://web.whatsapp.com/"  # WhatsApp
 
 # Youtube
 unbind = $mod, Y
-bind = $mod, Y, exec, $webapp="https://youtube.com/"
+bind = $mod, Y, exec, $webapp="https://youtube.com/"  # Youtube
 
 # ChatGPT
 unbind = $mod, A
-bind = $mod, A, exec, $webapp="https://chatgpt.com/"
+bind = $mod, A, exec, $webapp="https://chatgpt.com/"  # Chat GPT
 
 # Grok AI
 unbind = $mod SHIFT, A
-bind = $mod SHIFT, A, exec, $webapp="https://grok.com/"
+bind = $mod SHIFT, A, exec, $webapp="https://grok.com/"  # Grok AI
 
 # Google Gemini
 unbind = $mod CTRL, A
-bind = $mod CTRL, A, exec, $webapp="https://gemini.google.com/"
+bind = $mod CTRL, A, exec, $webapp="https://gemini.google.com/"  # Gemini AI
 
 # O!MPD
 unbind = $mod, O
-bind = $mod, O, exec, $webapp="http://media.server.lan/ompd"
+bind = $mod, O, exec, $webapp="http://media.server.lan/ompd"  # O!MPD
 
 # -------------------------------------------------------------------------------------------------
 # System Control
 # -------------------------------------------------------------------------------------------------
 # Lock screen
 unbind = $mod, L
-bind = $mod, L, exec, hyprlock
+bind = $mod, L, exec, hyprlock  # Lock screen
 
 # Power menu
 unbind = $mod, ESCAPE
-bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/config/bin/power-menu
+bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/config/bin/power-menu  # Power menu
