--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -35,7 +35,7 @@ exec-once = xrandr --output HDMI-A-1 --primary
 # Prefer dark themes on all gnome apps (fixes white system monitor)
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
-# Clean up any residual execution or PID from waybar_cava.sh and cava
+# Clean up waybar_cava.sh and cava before waybar starts!
 exec-once = pkill -f waybar_cava.sh
 exec-once = pkill cava
 #exec-once = rm -rf /tmp/waybar_cava* (safer being specific...)
@@ -44,5 +44,10 @@ exec-once = rm -rf /tmp/waybar_cava_--right.pid
 exec-once = rm -rf /tmp/waybar_cava_config_--left
 exec-once = rm -rf /tmp/waybar_cava_config_--right
 
+exec-once = hyprpm reload
+
+exec-once = generate_keybindings_help
+#__________________________________________________________________________________________________
+# ======================================= CUSTOM ENV VARS =========================================
 # Set Hyprshot save location
 env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
