--- a/config/hypr/plugins.conf
+++ b/config/hypr/plugins.conf
@@ -4,11 +4,11 @@
 
 plugin {
     hyprexpo {
-        columns = 3
+        columns = 4
         gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = first current # [center/first] [workspace] e.g. first 1 or center m+1
-	show_all_workspaces = true
+        bg_col = rgba(111111cc)
+        skip_empty = true
+        workspace_method = workspace # [center/first] [workspace] e.g. first 1 or center m+1
         gesture_distance = 300 # how far is the "max" for the gesture
     }
     
