--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -28,6 +28,8 @@ general {
     hide_cursor = true
     ignore_empty_input = false
     text_trim = false  #required for screenfetch ascii logo to show properly
+    fractional_scaling = 2
+    immediate_render = true
 }
 
 #__________________________________________________________________________________________________
