--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -90,10 +90,12 @@ bind = $mod SHIFT, TAB, exec, ~/.local/share/archriot/config/bin/scripts/fix-off
 unbind = $mod, V
 unbind = $mod, J
 unbind = $mod, TAB
+unbind = $mod, P
 #unbind = CTRL, TAB
 bind = $mod, V, togglefloating,  # Toggle floating window
 bind = $mod, J, togglesplit,  # Rearange windows
 bind = $mod, TAB, exec, ~/.local/share/archriot/config/bin/scripts/window-switcher.sh --all-workspaces  # Window switcher
+bind = $mod, P, pseudo
 #bind = CTRL, TAB, hyprexpo:expo, toggle
 
 # Move focus
