--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -44,9 +44,9 @@ exec-once = rm -rf /tmp/waybar_cava_--right.pid
 exec-once = rm -rf /tmp/waybar_cava_config_--left
 exec-once = rm -rf /tmp/waybar_cava_config_--right
 
-exec-once = hyprpm reload
+exec-once = hyprpm reload -nn
 
-exec-once = generate_keybindings_help
+exec = generate_keybindings_help
 #__________________________________________________________________________________________________
 # ======================================= CUSTOM ENV VARS =========================================
 # Set Hyprshot save location
