--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -37,6 +37,10 @@ windowrulev2 = size 85% 40%, class:^(com.mitchellh.ghostty-floating)$, workspace
 windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$, workspace:4
 
 
+windowrulev2 = center, title:^(Visual Pinball Player)$
+windowrulev2 = center, title:^(Visual Pinball - Backglass)$
+windowrulev2 = center, title:^(Visual Pinball - Score)$
+
 #__________________________________________________________________________________________________
 # ================================== BRAVE WEBAPPS WINDOW RULES ===================================
 # Use ' hyprctl clients | grep -A5 <page name> ' to better match page name
