--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,14 +7,14 @@ source = ~/.config/hypr/monitors.conf
 #__________________________________________________________________________________________________
 # ======================================= Default variables =======================================
 # Default MOD key
-$mod = SUPER
+# $mod = SUPER
 
 # Default applications
-$terminal = ghostty
-$fileManager = Thunar
-$browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
-$messenger = env GDK_SCALE=1 signal-desktop --ozone-platform=wayland --enable-features=UseOzonePlatform
-$webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
+# $terminal = ghostty
+# $fileManager = Thunar
+# $browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
+# $messenger = env GDK_SCALE=1 signal-desktop --ozone-platform=wayland --enable-features=UseOzonePlatform
+# $webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
 
 #__________________________________________________________________________________________________
 # ===================================== Core Hyprland Config ======================================
@@ -67,8 +67,8 @@ general {
     gaps_in = 0
     gaps_out = 2
     border_size = 1
-    col.active_border = rgba(89b4fa95) rgba(0000ff85) rgba(8000ff95)
-    col.inactive_border = rgba(89b4fa58) rgba(0000ff58)
+    col.active_border = rgba(89b4fa88) 45deg
+    col.inactive_border = rgba(1a1a1a60)
     layout = dwindle
     allow_tearing = false
 }
@@ -82,7 +82,7 @@ misc {
 
 # Group styling
 group {
-    col.border_active = rgba(bb9af7ff) 45deg
+    col.border_active = rgba(89b4fa88) 45deg
 
     groupbar {
         col.active = rgba(bb9af7ff)
