--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -6,6 +6,17 @@
 # - Run `generate_keybindings_help` and bind to $webapp="file:///path/to/help.html".
 # =================================================================================================
 
+# Default MOD key
+$mod = SUPER
+
+# Default applications
+$terminal = ghostty
+$dropterm = xterm -bg black -fg white -fa 'Monospace' -fs 12 -e bash
+$fileManager = Thunar
+$browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
+$webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
+$altbrowser = firefox
+
 # -------------------------------------------------------------------------------------------------
 # Main Shortcuts
 # -------------------------------------------------------------------------------------------------
@@ -16,11 +27,16 @@ bind = $mod, return, exec, $terminal  # Default terminal
 # Flying terminal
 unbind = $mod SHIFT, return
 bind = $mod SHIFT, return, exec, $terminal --class=com.mitchellh.ghostty-floating # Default terminal (flying)
+unbind = $mod ALT, SPACE
+bind = $mod ALT, SPACE, exec, ~/bin/dropterminal "$dropterm"  # Dropdown terminal
 
 # Default File Manager
 unbind = $mod, E
 bind = $mod, E, exec, $fileManager  # Thunar file manager
 
+# Default MPD player
+unbind = $mod, R
+bind = $mod, R, exec, kitty --class=mpd-player -e rmpc # MPD Player
 # System monitor
 unbind = $mod, T
 bind = $mod, T, exec, $terminal -e btop  # System Monitor
@@ -37,9 +53,7 @@ bind = $mod, Z, exec, zed  # Zed
 unbind = $mod, B
 bind = $mod, B, exec, $browser  # Brave
 unbind = $mod SHIFT, B
-bind = $mod SHIFT, B, exec, DRI_PRIME=1 firefox  # Firefox
-#unbind = $mod CTRL, B
-#bind = $mod CTRL, B, exec, chromium
+bind = $mod SHIFT, B, exec, DRI_PRIME=1 $altbrowser  # Firefox
 
 # App launcher
 unbind = $mod, space
@@ -215,8 +229,8 @@ bind = $mod SHIFT, W, exec, hyprshot -m window --clipboard-only  # Screenshot wi
 bind = $mod SHIFT, F, exec, hyprshot -m output --clipboard-only  # Screenshot output (clipboard only)
 
 # Color picker
-unbind = $mod, PRINT
-bind = $mod, PRINT, exec, hyprpicker -a  # Color picker
+unbind = $mod, P
+bind = $mod, P, exec, hyprpicker -a  # Color picker
 
 
 # -------------------------------------------------------------------------------------------------
