--- a/config/waybar/config
+++ b/config/waybar/config
@@ -5,16 +5,19 @@
     ],
     "fixed-center": true,
     "output": ["HDMI-A-1"],
+    //RIGHT
     "modules-right": [
-        "tray", "custom/separator#blank", "group/system-metrics", "custom/separator#blank",
+        "tray", "custom/separator#blank", "group/system-metrics", "custom/archriot-update",
         "custom/volume-bar", "network", "clock"
     ],
+    // CENTER
     "modules-center": ["custom/cava_left", "mpris", "custom/cava_right"],
     "layer": "top",
     "margin-right": 8,
+    // LEFT
     "modules-left": [
-        "custom/archriot-update",
-        "custom/arch", "custom/separator#blank", "hyprland/workspaces#rw", "custom/separator#blank", "hyprland/window"
+        //"custom/arch", "custom/separator#blank",
+        "hyprland/workspaces#rw", "custom/separator#blank", "hyprland/window"
     ],
     "margin-left": 8,
     "spacing": 10,
@@ -27,7 +30,7 @@
     // CypherRiot theme specific overrides
     "custom/arch": {
         "format": "󰣇",
-        "on-click": "nwg-drawer -c 4 -is 48 -spacing 15 -fm \"Noto Sans\" || fuzzel",
+        "on-click": "nwg-drawer -g Adwaita-dark || fuzzel",
         "on-click-right": "pkill fuzzel || fuzzel",
         "tooltip": true,
         "tooltip-format": "Left-click: App Drawer | Right-click: Fuzzel"
