added scripts, readability improvements
added openall, closeall script, adapted dropterminal for multimonitor setups and other minor tweaks

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,10 +6,10 @@ source = ~/.config/hypr/monitors.conf
 
 #__________________________________________________________________________________________________
 # ======================================= Default variables =======================================
-# Default MOD key
+# ---------- Default MOD key
 # $mod = SUPER
 
-# Default applications
+# ---------- Default applications
 # $terminal = ghostty
 # $fileManager = Thunar
 # $browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
@@ -19,13 +19,13 @@ source = ~/.config/hypr/monitors.conf
 #__________________________________________________________________________________________________
 # ===================================== Core Hyprland Config ======================================
 
-# Environment variables
+# ---------- Environment variables
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-# Autostart applications
+# ---------- Autostart applications
 exec-once = waybar
 exec-once = mako
 exec-once = hypridle
@@ -44,7 +44,7 @@ source = ~/.config/hypr/keybindings.conf
 #__________________________________________________________________________________________________
 # ======================================= INPUT SETTINGS ==========================================
 
-# Input configuration
+# ---------- Input configuration
 input {
     kb_layout = us
     kb_variant = intl
@@ -55,32 +55,32 @@ input {
     follow_mouse = 1
     sensitivity = 0
 
-    repeat_rate = 40
-    repeat_delay = 600
+    repeat_rate = 50
+    repeat_delay = 500
 }
 
 #__________________________________________________________________________________________________
 # ====================================== Default Appearance =======================================
 
-# General appearance
+# ---------- General appearance
 general {
-    gaps_in = 0
-    gaps_out = 2
-    border_size = 1
+    gaps_in = 2
+    gaps_out = 4
+    border_size = 0
     col.active_border = rgba(89b4fa88) 45deg
     col.inactive_border = rgba(1a1a1a60)
     layout = dwindle
     allow_tearing = false
 }
 
-# Miscellaneous
+# ---------- Miscellaneous
 misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
-    animate_manual_resizes = false
+    animate_manual_resizes = true
 }
 
-# Group styling
+# ---------- Group styling
 group {
     col.border_active = rgba(89b4fa88) 45deg
 
@@ -89,17 +89,17 @@ group {
     }
 }
 
-# Decorations
+# ---------- Decorations
 decoration {
     rounding = 8
 
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 0.85
     fullscreen_opacity = 1.0
 
     dim_inactive = true
-    dim_strength = 0.05
-    dim_special = 0.5
+    dim_strength = 0.08
+    dim_special = 0.7
 
     blur {
         enabled = true
@@ -112,15 +112,15 @@ decoration {
     }
 
     shadow {
-        enabled = true
-        range = 8
-        render_power = 8
+        enabled = false
+        range = 2
+        render_power = 4
         color = rgba(3a2b5acc)
         color_inactive = rgba(2a2b40aa)
     }
 }
 
-# Animations
+# ---------- Animations
 animations {
     enabled = true
 
@@ -142,7 +142,7 @@ animations {
     animation = workspaces, 1, 5, myBezier
 }
 
-# Layouts
+# ---------- Layouts
 dwindle {
     pseudotile = true
     preserve_split = true
