--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -11,6 +11,7 @@ $mod = SUPER
 
 # Default applications
 $terminal = ghostty
+$altterminal = kitty
 $dropterm = xterm -bg black -fg white -fa 'Monospace' -fs 12 -e bash
 $fileManager = Thunar
 $browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
@@ -36,7 +37,8 @@ bind = $mod, E, exec, $fileManager  # Thunar file manager
 
 # Default MPD player
 unbind = $mod, R
-bind = $mod, R, exec, kitty --class=mpd-player -e rmpc # MPD Player
+# bind = $mod, R, exec, $altterminal --class=mpd-player -e rmpc # MPD Player
+bind = $mod, R, exec, $altterminal --class=mpd-player -o background_opacity=0.5 -e rmpc # MPD Player
 # System monitor
 unbind = $mod, T
 bind = $mod, T, exec, $terminal -e btop  # System Monitor
@@ -51,8 +53,8 @@ bind = $mod, Z, exec, zed  # Zed
 
 # Default and Alt Browsers
 unbind = $mod, B
-bind = $mod, B, exec, $browser  # Brave
 unbind = $mod SHIFT, B
+bind = $mod, B, exec, $browser  # Brave
 bind = $mod SHIFT, B, exec, DRI_PRIME=1 $altbrowser  # Firefox
 
 # App launcher
@@ -64,7 +66,14 @@ unbind = $mod, Q
 bind = $mod, Q, killactive  # Close active window
 # Close all unfocused windows on the current workspace
 unbind = $mod SHIFT, Q
-bind = $mod SHIFT, Q, plugin:xtd:closeunfocused  # Close all unfocused windows
+bind = $mod SHIFT, Q, plugin:xtd:closeunfocused  # Close all unfocused windows in current workspace
+# Close all windows in all workspaces
+unbind = CTRL ALT, backspace
+bind = CTRL ALT, backspace, exec, $HOME/bin/hyprland_closeall # Close all windows on all workspaces
+
+# Open all custom windows (see script for list/positions)
+unbind = $mod, backspace
+bind = $mod, backspace, exec, $HOME/bin/hyprland_openall
 
 # Control Panel
 unbind = $mod, F12
@@ -72,7 +81,7 @@ bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HO
 
 # Pomodoro Timer
 unbind = $mod, comma
-bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh  # Pomodoro Timer
+# bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh  # Pomodoro Timer
 
 # Help system
 unbind = $mod, H
@@ -88,10 +97,13 @@ bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  #Change Backgroun
 
 # Notifications
 unbind = $mod, period
-bind = $mod, period, exec, makoctl dismiss  # Dismiss a notification
 unbind = $mod SHIFT, period
+bind = $mod, period, exec, makoctl dismiss  # Dismiss a notification
 bind = $mod SHIFT, period, exec, makoctl dismiss --all  # Dismiss all notifications
 
+# Clock (clock-rs)
+unbind = $mod CTRL, period
+bind = $mod CTRL, period, exec, $altterminal --class=clock-rs -o font_size=18 -o background_opacity=0.0 -e clock-rs -c bright-blue
 
 # -------------------------------------------------------------------------------------------------
 # Window Management
@@ -217,16 +229,16 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 unbind = , PRINT
 unbind = SHIFT, PRINT
 unbind = CTRL, PRIN
-bind = , PRINT, exec, hyprshot -m region  # Screenshot region
+bind = , PRINT, exec, hyprshot -m region       # Screenshot region
 bind = SHIFT, PRINT, exec, hyprshot -m window  # Screenshot window
-bind = CTRL, PRINT, exec, hyprshot -m output  # Screenshot output
+bind = CTRL, PRINT, exec, hyprshot -m output   # Screenshot output
 # Screenshots (clipboard only)
+unbind = $mod , S
 unbind = $mod SHIFT, S
-unbind = $mod SHIFT, W
-unbind = $mod SHIFT, F
-bind = $mod SHIFT, S, exec, hyprshot -m region --clipboard-only  # Screenshot region (clipboard only)
-bind = $mod SHIFT, W, exec, hyprshot -m window --clipboard-only  # Screenshot window (clipboard only)
-bind = $mod SHIFT, F, exec, hyprshot -m output --clipboard-only  # Screenshot output (clipboard only)
+unbind = $mod CTRL, S
+bind = $mod, S, exec, hyprshot -m region --clipboard-only        # Screenshot region (clipboard only)
+bind = $mod SHIFT, S, exec, hyprshot -m window --clipboard-only  # Screenshot window (clipboard only)
+bind = $mod CTRL, S, exec, hyprshot -m output --clipboard-only   # Screenshot output (clipboard only)
 
 # Color picker
 unbind = $mod, P
